# pypistats

./: .codecov.yml  .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  RELEASING.md  azure-pipelines.yml  pyproject.toml  requirements-mypy.txt  requirements-only-binaries.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/jobs/: lint.yml  test.yml
.github/: dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/workflows/: automerge.yml  deploy.yml  labels.yml  lint.yml  python-package.yml  release-drafter.yml  test.yml
example/: example.py
myenv/: pyvenv.cfg
pypistats/: __init__.py  cli.py  version.py
scripts/: run_command.py
src/pypistats/: __init__.py  __main__.py  _cache.py  cli.py  version.py
tests/: test_cache.py  test_cli.py  test_pypistats.py  test_pypistats_cache.py  test_pypistats_print.py
tests/data/: expected_tabulated.py  python_minor.py  tabulated_rst.py
