[metadata]
name = pypistats
description = Python interface to PyPI Stats API https://pypistats.org/api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/pypistats
author = hugovk
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords =
    PyPI
    downloads
    statistics
    stats
    BigQuery
project_urls =
    Source=https://github.com/hugovk/pypistats

[options]
packages = find:
install_requires =
    httpx>=0.19
    platformdirs
    prettytable>=2.4.0
    pytablewriter[html]>=0.63
    python-dateutil
    python-slugify
    termcolor
    importlib-metadata;python_version < '3.8'
python_requires = >=3.7
package_dir = =src
setup_requires =
    setuptools_scm
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pypistats = pypistats.cli:main

[options.extras_require]
numpy =
    numpy
pandas =
    pandas
tests =
    freezegun
    pytest
    pytest-cov
    respx>=0.11

[flake8]
max_line_length = 88

[tool:isort]
profile = black

[tool:pytest]
addopts = --color=yes
